chore: Clean up example teamCode

--- a/example/templates/index.html
+++ b/example/templates/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Aerospace Jam Example</h1>
     <!-- Notice how the span that contains the placeholder value has an ID. We reference this ID later in the script, and it lets us pick this element in specific. -->
-    <p><b>Random number chosen by the Pi: </b> <span id="randomNumber">Loading...</span> hPa</p>
+    <p><b>Random number chosen by the Pi: </b> <span id="randomNumber">Loading...</span></p>
     <script>
         // This function wrapper (addEventListener) makes the inner contents run only when the DOM (Document Object Model) content is loaded.
         // In simpler terms, this runs once the page has finished loading.
